# rust_blockchain_etl

./: .gitignore  Cargo.toml  README.md
outputs/block_1049235/: tx_0x0a15a84f95bdc8a78a683feea867b6d1af0fbb0154df1ee78cf1c8968a2a3816.csv  tx_0x0efd5aabde052b648079a07c8738c9af848ad97ec3bb468f0af519fe715a3d6f.csv  tx_0x8e82c4621f888f8e461f937a688e772a7e45d0f600b34b84283bd241db0d936a.csv  tx_0xb58c171d122d4870d871e120b9ed44924050d97b43ef06714997d34e41ef9136.csv  tx_0xc4396275a4daa094255e34b36901879ad5d6d35bc096837450c9c94f59fc5740.csv  tx_0xe1189fc9a07223d720937c8bce06730fc0b9ddafacc0c045ce97e94763e0d8e8.csv  tx_0xee610cf5bd29498ef27f289984280eb9e447753dc26223d36010e06fcf496371.csv  tx_0xf59948b5056c278f87a62f0becc97043acf5fafabe5596ed3cc03810e0068145.csv
outputs/block_17125941/: tx_0x0ba5a570fd782bfcce58a0da703d3ba2556b32cf506afd9764f064164ea5c583.csv  tx_0x10ad5d8853b9d6212f3edae50deef542609f18332a653a128e908a9365a32915.csv  tx_0x16e6b77702096c6e47e15802ad43965713d3a5877ded9a9d753184dabc1c395a.csv  tx_0x173b7a3008552a37cbf6370c832c119408ae8d2a4d854ebb1d2b46ee9d3726f2.csv  tx_0x18175c26d013e157565f0477f5ceaa150ee256f8c9a11b7e55254eb2e08ea2e1.csv  tx_0x18824e7e7cffec9a4cda947cdffb1fc0c19095ee03a76672f8518c7cb9927b01.csv  tx_0x2387fe5aed90fb82fe301d5353988f6ffa46d22f7aa502434d509ff2bb25d47d.csv  tx_0x27e67531b87234df9892139806929060e908e66d06b7f49d25a170919c9d976a.csv  tx_0x28a5a614f1531bfb080cab4b119875d0e1613d42d072eefcc1927db54706d014.csv  tx_0x30665c0836d0ec9c53c47ba435bd7fb723bdaa362482b0537ebc2757ea235ff6.csv  (+29 more)
src/: main.rs
