[package]
name = "rust_blockchain_etl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.12", features = ["derive"] }
csv = "1.2.2"
dotenv = "0.15.0"
hex = "0.4.3"
tokio = "1.29.1"
web3 = "0.19.0"
